<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:padding="30dp"
    tools:context=".Users.WelcomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/icon_newspaper" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center_horizontal"
            android:text="@string/welcome_screen_title"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_light"
            android:gravity="center_horizontal"
            android:text="@string/welcome_screen_subtitle"
            android:textColor="#B3000000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/elementColor"
                android:onClick="welcomeClick"
                android:text="@string/login_title"
                android:textColor="@color/mainTextColor"
                android:textSize="16sp" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/elementColor"
                android:onClick="welcomeClick"
                android:text="@string/signUp_title"
                android:textColor="@color/mainTextColor"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/asGuestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/emptyColor"
            android:onClick="welcomeClick"
            android:text="@string/asGuest_title"
            android:stateListAnimator="@null"
            android:textAllCaps="false"
            android:textColor="@color/mainTextColor"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>