<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Users.signUp.Sign1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:boxStrokeColor="@color/strokeColor"
            app:boxStrokeWidth="3dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/strokeColor"
            app:hintTextColor="@color/mainTextColor"
            app:startIconDrawable="@drawable/icon_user"
            app:startIconTint="@color/strokeColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_slab"
                android:inputType="text"
                android:textColor="@color/mainTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_fullname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            app:boxStrokeColor="@color/strokeColor"
            app:boxStrokeWidth="3dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/strokeColor"
            app:hintTextColor="@color/mainTextColor"
            app:startIconDrawable="@drawable/icon_write"
            app:startIconTint="@color/strokeColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_slab"
                android:inputType="text"
                android:textColor="@color/mainTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxStrokeColor="@color/strokeColor"
            app:boxStrokeWidth="3dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/strokeColor"
            app:hintTextColor="@color/mainTextColor"
            app:startIconDrawable="@drawable/icon_user"
            app:startIconTint="@color/strokeColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_slab"
                android:inputType="text"
                android:textColor="@color/mainTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxStrokeColor="@color/strokeColor"
            app:boxStrokeWidth="3dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/strokeColor"
            app:hintTextColor="@color/mainTextColor"
            app:startIconDrawable="@drawable/icon_password"
            app:startIconTint="@color/strokeColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_slab"
                android:inputType="textPassword"
                android:textColor="@color/mainTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:boxStrokeColor="@color/strokeColor"
            app:boxStrokeWidth="3dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/strokeColor"
            app:hintTextColor="@color/mainTextColor"
            app:startIconDrawable="@drawable/icon_phone"
            app:startIconTint="@color/strokeColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_slab"
                android:inputType="phone"
                android:maxLength="12"
                android:textColor="@color/mainTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/elementColor"
            android:text="@string/next"
            android:textColor="@color/mainTextColor"
            android:textSize="20sp" />


    </LinearLayout>


</FrameLayout>