<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle_shape"
    tools:context=".art.WriteArticle">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/BackgroundColor"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/name_newspaper"
                android:textColor="@color/mainTextColor"
                android:textSize="40dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@drawable/separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ownerArticleWrite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_slab_light"
                    android:text="@string/wrA_owner"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dateArticleWrite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_slab_light"
                    android:gravity="right"
                    android:text="@string/wrA_date"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/separator" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameArticle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wrA_name"
                app:boxStrokeColor="@color/strokeColor"
                app:boxStrokeWidth="3dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/strokeColor"
                app:hintTextColor="@color/mainTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_slab"
                    android:textColor="@color/mainTextColor"
                    android:textSize="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/categoryArticle"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionArticle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/wrA_description"
                app:boxStrokeColor="@color/strokeColor"
                app:boxStrokeWidth="3dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/strokeColor"
                app:hintTextColor="@color/mainTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_slab"
                    android:inputType="textMultiLine"
                    android:maxLength="70"
                    android:maxLines="3"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contentArticle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/wrA_write_article"
                app:boxStrokeColor="@color/strokeColor"
                app:boxStrokeWidth="3dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/strokeColor"
                app:hintTextColor="@color/mainTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_slab"
                    android:inputType="textMultiLine"
                    android:maxLines="50"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/pic_article"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_shape"
                android:src="@drawable/image_photo" />

            <Button
                android:id="@+id/sendArt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/elementColor"
                android:text="Send"
                android:textColor="@color/mainTextColor"
                android:textSize="20sp" />


        </LinearLayout>

    </ScrollView>

</FrameLayout>