<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:padding="30dp"
    tools:context=".Users.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/login_title"
            android:textAllCaps="true"
            android:textColor="@color/mainTextColor"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enter_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone"
                app:boxStrokeColor="@color/strokeColor"
                app:boxStrokeWidth="3dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/mainTextColor"
                app:hintTextColor="@color/mainTextColor"
                app:startIconDrawable="@drawable/icon_phone"
                app:startIconTint="@color/mainTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_slab"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:text="+380"
                    android:textColor="@color/mainTextColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enter_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:boxStrokeColor="@color/strokeColor"
                app:boxStrokeWidth="3dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/mainTextColor"
                app:hintTextColor="@color/mainTextColor"
                app:startIconDrawable="@drawable/icon_password"
                app:startIconTint="@color/mainTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_slab"
                    android:inputType="textPassword"
                    android:textColor="@color/mainTextColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <CheckBox
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/strokeColor"
                    android:gravity="center_vertical"
                    android:text="@string/rememberMe"
                    android:textColor="@color/mainTextColor" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:backgroundTint="@color/emptyColor"
                    android:stateListAnimator="@null"
                    android:text="@string/forget_password"
                    android:textAllCaps="false"
                    android:textColor="@color/mainTextColor"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/elementColor"
                android:onClick="logIn"
                android:text="@string/login_title"
                android:textColor="@color/mainTextColor"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/progress_bar"
                android:elevation="8dp"
                android:padding="20dp">

                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:visibility="visible" />

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>


</ScrollView>